WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127500
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=127500
Summary
[WinCairo] Compile error.
peavo
Reported
2014-01-23 12:04:51 PST
Compiling WinCairo, I'm getting a compile error in WebKit/win/WebCache.cpp because CurlCacheManager::getCacheDirectory() has changed name to cacheDirectory().
Attachments
Patch
(1.21 KB, patch)
2014-01-23 12:09 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-01-23 12:09:04 PST
Created
attachment 222011
[details]
Patch
Brent Fulgham
Comment 2
2014-01-23 12:47:07 PST
Comment on
attachment 222011
[details]
Patch r=me.
WebKit Commit Bot
Comment 3
2014-01-23 13:13:40 PST
Comment on
attachment 222011
[details]
Patch Clearing flags on attachment: 222011 Committed
r162635
: <
http://trac.webkit.org/changeset/162635
>
WebKit Commit Bot
Comment 4
2014-01-23 13:13:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug