[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=127500

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-01-23
Reviewed by Brent Fulgham.

* WebCache.cpp:
(WebCache::cacheFolder): CurlCacheManager::getCacheDirectory() has changed name to cacheDirectory().

Canonical link: https://commits.webkit.org/145514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162635 268f45cc-cd09-0410-ab3c-d52691b4dbfc